--- a/info.ini
+++ b/info.ini
@@ -1,6 +1,6 @@
 name = gonglue
-title = 攻略管理
-intro = 攻略管理
+title = 婚庆攻略
+intro = 婚庆攻略
 author = zengzh
 website = https://www.fastadmin.net
 version = 1.0.0
